Add regreplop, vim-repeat and vim-unimpared

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,12 @@
 [submodule "bundle/vim-gitgutter"]
 	path = bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter
+[submodule "bundle/regreplop"]
+	path = bundle/regreplop
+	url = https://github.com/vim-scripts/regreplop.vim
+[submodule "bundle/vim-unimpaired"]
+	path = bundle/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired
+[submodule "bundle/vim-repeat"]
+	path = bundle/vim-repeat
+	url = https://github.com/tpope/vim-repeat
